--- a/MyApplication/src/main/resources/application.yml
+++ b/MyApplication/src/main/resources/application.yml
@@ -6,4 +6,11 @@ management:
     web:
       exposure:
         include:
-        - "*"  
+          '*'
+        
+spring:
+  data:
+    mongodb:
+      host: localhost
+      port: 27017
+      database: MicroServDB
